test/i2c_unit_test/i2c_unit_test.cc
#include <>

int main () {
  // init - deviceinfo

  // init - bus 

  // init - busadapter

  // init - register

  // error

  // warning

  // function test
}